[package]
name = "vault-indexer-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
vault-indexer-core = { path = "../core" }
vault-indexer-storage = { path = "../storage" }
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
